Add `contents: write` permission to `publish.yml` workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     # Skip if a commit message contains [skip ci] or was made by this workflow
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
 
