--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,9 +33,8 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Bump version
-        run: |
-          npm version patch -m "chore: bump version to %s [skip ci]"
+      - name: Bump version (no commit yet)
+        run: npm version patch --no-git-tag-version
 
       - name: Build
         run: npm run build
@@ -45,5 +44,10 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Push version bump
-        run: git push --follow-tags
+      - name: Commit and push version bump
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          git add package.json package-lock.json
+          git commit -m "chore: release v${VERSION} [skip ci]"
+          git tag "v${VERSION}"
+          git push --follow-tags
